testsuite/tests/linear/should_fail/Linear5.stderr

Linear5.hs:7:20: error:
    • Couldn't match type ‘'Omega’ with ‘'One’
        arising from multiplicity of ‘n’
    • In an equation for ‘incorrectEqn’: incorrectEqn False n = 0
